2017-12-27  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STBlock.m (valueWithArguments:): Remove comma that unintentionally
    breaks an exception format string

    * STCompilerUtils.h: Fix wrong return type in method declaration
    flagged up by the GNUstep runtime.

2014-11-01  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STBlock.m (-valueWithArguments:): Fix bug where the cached context
    of a block could be reused prematurely.
    Note: This could happen only when a block is called recursively and
    entered more than once in an inner invocation, as, e.g., in the
    following code to compute the Fibonacci numbers:
      fib := [:n |
        (n <= 1)
          ifTrue: [1]
          ifFalse: [(fib value: (n - 1)) + (fib value: (n - 2))]].
      fib value: 3.
    Note that the code still does not produce the correct result because
    blocks are not (yet) reentrant in the interpreter, but at least the
    interpreter does not crash anymore.

2014-11-01  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STBlock.m (-dealloc): Release cachedContext attribute.
    * STBlockContext.m (-dealloc): Restore method to release homeContext
    attribute.
    * STBytecodeInterpreter.m (-dealloc): Fix typo in method name and
    release activeContext attribute.
    * STBytecodeInterpreter.m (-interpretMethod:forReceiver:arguments:):
    Release newContext also when an exception is raised while interpreting
    the method.
    * STCompiledScript.m (-executeInEnvironment:): Release script object
    also when an exception is raised while interpreting the script.
    * STCompiler.m (-dealloc): Release environment attribute.
    * STCompiler.m (-compileString:): Release local auto release pool also
    when an exception is raised during compilation.
    * STSmalltalkScriptObject.m (-forwardInvocation:): Release local
    autorelease pool and args array also when an exception is raised while
    interpreting the method.

2014-10-14  Wolfgang Lux  <wolfgang.lux@gmail.com>
